Resolve deprecated calls and fix unstable test